Fix: horizontal scroll on phone, grid layout on phone

--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -167,7 +167,7 @@
     }
 
     .items {
-        grid-template-columns: repeat(auto-fill, 145px);
+        grid-template-columns: 1fr 1fr;
         grid-gap: 15px;
     }
 
